# network-tester

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  testbed-nightly.yml
.grill/: implementation-constraints.md  network-tester-design.md
charm/: LICENSE  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charm/payload/: bgp_inference.py  bond_validator.py  mtu_validator.py  probe.py  probe_runner.py  representatives.py  schemas.py  vlan_neighbor_validator.py
charm/src/: charm.py
charm/tests/integration/: conftest.py  test_charm.py  test_charm_jubilant.py
charm/tests/unit/: test_charm.py
cli/: __init__.py  juju_run.py  maas_topology.py  main.py  report_generator.py  schemas.py
docs/: manual-hardware-runbook.md
openspec/changes/network-tester/: design.md  phase10-baseline-topology.json  phase10-single-stage-findings.md  proposal.md  tasks.md
testbed/: README.md  nt-testbed  topology.yaml
tests/: conftest.py  maas_fakes.py  test_bgp_inference.py  test_bond_validator.py  test_cli.py  test_cross_implementation.py  test_juju_run.py  test_maas_topology.py  test_mtu_validator.py  test_probe_runner.py  test_report_generator.py  test_representatives.py  test_scale_limits.py  test_schemas.py  test_timeout_budget.py  test_vlan_neighbor_validator.py
tests/fixtures/: probe_output_complete.json  probe_output_crossrack.json  probe_output_findings.json  probe_output_skipped.json  probe_output_timeout.json  report_sample.json  topology_mixed_fabric_host.json  topology_mixed_scope.json  topology_single_rack.json  topology_two_rack.json
(+10 files in other folders)
