[project]
name = "network-tester-cli"
version = "0.1.0"
description = "Validates datacenter network cabling and configuration against the MAAS-defined topology"
requires-python = ">=3.10"
dependencies = [
    # MAAS REST API access (OAuth1-signed requests)
    "requests",
    "requests-oauthlib",
    # Juju client (python-libjuju)
    "juju",
]

[project.scripts]
network-tester = "cli.main:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = ["charm"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
